--- a/css/style.css
+++ b/css/style.css
@@ -60,14 +60,27 @@ body {
 .app {
     display: grid;
     grid-template-columns: minmax(380px, 22vw) 1fr;
-    grid-template-rows: auto 1fr;
-    gap: 1rem;
+    grid-template-rows: 1fr;  
 
-    height: 100vh;
     border: 0.4px solid var(--border);
     background: var(--bg-main);
     margin-top: 44px;
+    height: 100vh;
+    overflow: hidden;
 }
+
+
+
+
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden; 
+}
+
+
 
 .header {
     grid-column: 1 / -1;
@@ -89,4 +102,18 @@ body {
     gap: 1rem;
     overflow-x: auto;
     overflow-y: hidden;
+}
+
+
+.menu-btn {
+  width: 100%;
+  height: 3.5rem;
+  background: var(--bg-btn-active);
+  text-align: left;
+  font-size: 44px;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 44px;
+  margin-left: 44px;
+
 }
