--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 body {
   font-family: 'Share Tech Mono', monospace;
-  background: var(--bg-main);
+  background: var(--bg-header);
   color: var(--text-main);
 }
 
@@ -22,11 +22,58 @@ body {
    FÄRGVARIABLER
    ========================= */
 
-:root {
+
+
+@media (prefers-color-scheme: dark){
+  :root {
+  --bg-main: #0a0a0c;
+  --bg-deep: #0c0c0e;
+  --bg-card: #121216;
+  --bg-element: #07070b;
+  --bg-header: #5e6ad2;
+  --text-main: #f5f5f7;
+  --text-dim: #8a8a92;
+  --text-muted: #5e6ad2;
+  --text-hovered: #707df0;
+  --border: #2a2a32;
+  --border-strong: #3f3f46;
+  --accent-cyan: #22d3ee;
+  --accent-amber: #fbbf24;
+  --accent-crimson: #f87171;
+  --accent-violet: #a78bfa;
+  --accent-todo: #60a5fa;
+  --success: #22c55e;
+  }
+}
+
+:root[data-theme="light"] {
+  --bg-main: #ffffff;
+  --bg-deep: #E5E7EB;
+  --bg-card: #ffffff;
+  --bg-element: #f9fafb;
+  --bg-header: #ffffff;
+
+  --text-main: #111827;
+  --text-dim: #4b5563;
+  --text-muted: #9ca3af;
+
+  --border: #d1d5db;
+  --border-strong: #9ca3af;
+
+  --accent-cyan: #22d3ee;
+  --accent-amber: #fbbf24;
+  --accent-crimson: #f87171;
+  --accent-violet: #a78bfa;
+  --accent-todo: #60a5fa;
+  --success: #22c55e;
+  --accent-theme: #fbbf24
+}
+
+:root[data-theme="dark"] {
 --bg-main: #0a0a0c;
 --bg-deep: #0c0c0e;
 --bg-card: #121216;
---bg-element: #1c1c21;
+--bg-element: #19171e;
 --bg-header: #5e6ad2;
 --text-main: #f5f5f7;
 --text-dim: #8a8a92;
@@ -40,22 +87,8 @@ body {
 --accent-violet: #a78bfa;
 --accent-todo: #60a5fa;
 --success: #22c55e;
-}
+--accent-theme: white;
 
-
-:root[dark-mode] {
-  --bg-main: #0a0a0c;
-  --bg-deep: #111827;
-  --bg-card: #121216;
-  --bg-element: #1c1c21;
-  --bg-header: #5e6ad2;
-
-  --text-main: #f5f5f7;
-  --text-dim: #8a8a92;
-  --text-muted: #5e6ad2;
-  --text-hovered: #707df0;
-  --border: #2a2a32;
-  --border-strong: #9ca3af;
 }
 
 /* =========================
@@ -106,6 +139,27 @@ body {
   margin-bottom: 24px;
 }
 
+.theme-btn-outer {
+    position: relative;
+    width: 88px;
+    height: 88px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    background: var(--bg-element);
+    
+}
+
+.theme-btn-outer .material-symbols-rounded {
+    font-size: 44px;
+    color: var(--accent-theme);
+}
+
+.material-symbols-rounded:hover {
+  font-size: 64px;
+}
+
 /* DEV ONLY */
 .menu-btn.dev {
   background: rgba(239, 68, 68, 0.15);
@@ -129,8 +183,8 @@ body {
    ========================= */
 .center {
   flex: 1;
-  background: #f6f8fb;
   padding: 12px;
+  background: var(--bg-header);
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -579,7 +633,6 @@ body {
 
 body {
   font-family: 'Share Tech Mono', monospace;
-  background: var(--bg-main);
   color: var(--text-main);
 }
 
@@ -601,7 +654,7 @@ body {
    ========================= */
 .left {
   display: none;
-  background: var(--bg-element);
+  background: var(--bg-main);
   position: relative;
   z-index: 10;
 }
@@ -658,7 +711,7 @@ body {
    ========================= */
 .center {
   flex: 1;
-  background: var(--bg-main);
+  background: var(--bg-element);
   padding: 12px;
   display: flex;
   flex-direction: column;
