--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
 
 :root[data-theme="light"] {
   --bg-main: #ffffff;
-  --bg-deep: #E5E7EB;
+  --bg-deep: #fbfbfb;
   --bg-card: #ffffff;
   --bg-element: #f9fafb;
   --bg-header: #ffffff;
@@ -66,7 +66,7 @@ body {
   --accent-violet: #a78bfa;
   --accent-todo: #60a5fa;
   --success: #22c55e;
-  --accent-theme: #fbbf24
+  --accent-theme: #fb8f24;
 }
 
 :root[data-theme="dark"] {
@@ -105,39 +105,42 @@ body {
    ========================= */
 .left {
   display: none;
-  background: var(--bg-element);
   position: relative;
+  border-right: 2px solid var(--border);
   z-index: 10;
 }
 
 .menu {
   display: flex;
+  
   flex-direction: column;
   padding: 24px;
   height: 100%;
 }
-
-/* Övre menyval */
 .menu-main {
   display: flex;
   flex-direction: column;
 }
 
-/* Nedre (DEV) */
-.menu-dev {
-  margin-top: auto;
-}
-
-/* Gemensam knappstil */
-.menu-btn {
-  background: none;
+.menu-main button {
   border: none;
   font-size: 32px;
   text-align: left;
   cursor: pointer;
-  color: var(--text-dim);
-  margin-bottom: 24px;
+  margin: 12px;
+  padding: 22px 22px;
+  color: var(--text-main);
+
 }
+
+/* Nedre (DEV) */
+.menu-dev {
+  margin-top: auto;
+    text-align: center;
+
+}
+
+/* Gemensam knappstil */
 
 .theme-btn-outer {
     position: relative;
@@ -146,7 +149,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    
     border-radius: 12px;
+    border-color: var(--accent-theme);
     background: var(--bg-element);
     
 }
@@ -184,7 +189,7 @@ body {
 .center {
   flex: 1;
   padding: 12px;
-  background: var(--bg-header);
+  background: var(--bg-deep);
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -654,7 +659,7 @@ body {
    ========================= */
 .left {
   display: none;
-  background: var(--bg-main);
+  background: var(--bg-deep);
   position: relative;
   z-index: 10;
 }
@@ -711,7 +716,7 @@ body {
    ========================= */
 .center {
   flex: 1;
-  background: var(--bg-element);
+  background: var(--bg-main);
   padding: 12px;
   display: flex;
   flex-direction: column;
