--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,51 @@ body {
     background: var(--bg-element);
     
 }
+.addTaskDiv {
+            background: var(--bg-panel);
+          padding: 2.5rem;
+          height: 520px;
+          border-radius: 12px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          position: relative;
+          width: 444px;
+          text-align: left;
+          border-left: 2px solid rgba(255, 255, 255, 0.1);
+          box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+}
 
+.taskInput {
+      background: var(--bg-deep);
+      height: 3.5rem;
+      display: flex;
+      margin-bottom: 8px;
+      align-items: center;
+      padding: 0 1rem;
+  }
+.confirmBtn {
+              width: 100%;
+          height: 3.5rem;
+          background: var(--bg-card);
+          color: var(--text-main);
+          font-weight: bold;
+          cursor: pointer;
+
+          margin-bottom: 1rem; 
+          transition: background-color 0.3s, transform 0.1s;
+          letter-spacing: 0.2rem;
+}
+
+.taskInput input {
+          background: transparent;
+          border: none;
+          outline: none;
+          color: white;
+          width: 100%;
+          font-family: 'Share Tech Mono', monospace;
+          font-size: 1.2rem;
+}
 .theme-btn-outer .material-symbols-rounded {
     font-size: 44px;
     color: var(--accent-theme);
@@ -1064,6 +1108,38 @@ body {
   background: var(--accent-crimson);
   color: #000;
 }
+
+
+#addTaskModal {
+  overflow: visible;
+  z-index: 2;
+            background: var(--bg-deep);
+          padding: 2.5rem;
+          height: 520px;
+          display: flex;
+          border-radius: 12px;
+          flex-direction: column;
+          justify-content: center;
+          width: 444px;
+          position: fixed;
+          display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+          text-align: left;
+          border-left: 2px solid rgba(255, 255, 255, 0.1);
+          box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+}
+
+.addTaskHeader {
+  margin-bottom: 4px;
+}
+
+#addTaskModal[hidden] {
+  display: none !important;
+}
+
+
 
 /* =========================
    CHECKBOX
